--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -1,7 +1,7 @@
 @import '../abstract/variaveis';
 
 .banner{
-    background: url(../../imagens/banner.jpeg) 27% center no-repeat;
+    background: url(../imagens/banner.jpeg) 27% center no-repeat;
     background-size: cover;
     display: flex;
     justify-content: center;
