--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ nav ul li a:hover {
 }
 
 .banner {
-  background: url(../../imagens/banner.jpeg) 27% center no-repeat;
+  background: url(../imagens/banner.jpeg) 27% center no-repeat;
   background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
